--- a/src/scss/5.pages/_home.scss
+++ b/src/scss/5.pages/_home.scss
@@ -10,6 +10,10 @@
   margin-top: 9rem;
 }
 
+.main-container.expanded-header {
+  margin-top: 24rem;
+}
+
 .main_sidebar ~ .main-container {
   margin-left: 25rem;
 }
