--- a/src/scss/6.theme/_light.scss
+++ b/src/scss/6.theme/_light.scss
@@ -150,7 +150,7 @@
   }
   //Message
   .ant-message-notice-content {
-    background-color: $lightBg;
+    background-color: $common_light_extra_color_8;
   }
 
   .ant-message-custom-content {
@@ -322,7 +322,7 @@
   //Modal
   .ant-modal-content,
   .ant-modal-header {
-    background-color: $lightBg;
+    background-color: $common_light_extra_color_8;
   }
 
   .ant-modal-title,
@@ -780,5 +780,11 @@
     &-headertext {
       color: $common_light_extra_color_6;
     }
+  }
+
+  //Modal Confirm
+  .ant-modal-confirm-body .ant-modal-confirm-title,
+  .ant-modal-confirm-body .ant-modal-confirm-content {
+    color: $light_font_color;
   }
 }
