--- a/src/scss/7.vendors/_table.scss
+++ b/src/scss/7.vendors/_table.scss
@@ -1,6 +1,10 @@
 .ant-table {
     background-color: transparent;
   }
+
+  .ant-table-tbody > tr.ant-table-row:hover > td, .ant-table-tbody > tr > td.ant-table-cell-row-hover{
+    background-color: transparent;
+  }
   
   .ant-table-thead > tr > th,
   .ant-table.ant-table-bordered > .ant-table-container,
