--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,6 +28,8 @@
 @import "./7.vendors/input";
 @import "./7.vendors/PageHeader";
 @import "./7.vendors/table";
+@import "./7.vendors/ant-alert";
+@import "./7.vendors/ant-tree";
 
 
 
