--- a/src/scss/6.theme/all-color/_blue.scss
+++ b/src/scss/6.theme/all-color/_blue.scss
@@ -23,7 +23,8 @@
   }
 
   //checkbox
-  .ant-checkbox-checked .ant-checkbox-inner {
+  .ant-checkbox-checked .ant-checkbox-inner,
+  .ant-tree-checkbox-checked .ant-tree-checkbox-inner {
     background-color: $color-1;
     border-color: $color-1;
   }
@@ -32,7 +33,8 @@
     border-color: $color-1;
   }
 
-  .ant-checkbox-indeterminate .ant-checkbox-inner::after {
+  .ant-checkbox-indeterminate .ant-checkbox-inner::after,
+  .ant-tree-checkbox-indeterminate .ant-tree-checkbox-inner::after {
     background-color: $color-1;
   }
 
@@ -43,7 +45,11 @@
   .ant-checkbox-wrapper:hover .ant-checkbox-inner,
   .ant-checkbox:hover .ant-checkbox-inner,
   .ant-checkbox-input:focus + .ant-checkbox-inner,
-  .ant-checkbox-checked::after {
+  .ant-checkbox-checked::after,
+  .ant-tree-checkbox-wrapper:hover .ant-tree-checkbox-inner,
+  .ant-tree-checkbox:hover .ant-tree-checkbox-inner,
+  .ant-tree-checkbox-input:focus + .ant-tree-checkbox-inner,
+  .ant-tree-checkbox-checked::after {
     border-color: $color-1;
   }
 
@@ -175,7 +181,8 @@
     border-color: $color-1;
   }
 
-  .ant-input-affix-wrapper:focus, .ant-input-affix-wrapper-focused {
+  .ant-input-affix-wrapper:focus,
+  .ant-input-affix-wrapper-focused {
     border-color: $color-1;
     box-shadow: 0 0 0 2px rgba($color: $color-1, $alpha: $opacity-low);
   }
@@ -198,10 +205,8 @@
     }
   }
 
-  .main_sidebar-btnCollapsed{
+  .main_sidebar-btnCollapsed {
     background-color: $color-1;
     color: $common_extra_color_1;
   }
 }
-
-
