setup workspace page

--- a/src/scss/1.abstract/_variable.scss
+++ b/src/scss/1.abstract/_variable.scss
@@ -68,6 +68,9 @@ $common_dark_extra_color_7: #637381;
 $common_light_extra_color_8: #ffffff;
 $common_dark_extra_color_8: #212b36;
 
+$common_light_extra_color_9: #ffffff;
+$common_dark_extra_color_9: #161c24;
+
 //Blue Color
 $LightBlue-primary: #265fd5;
 $LightBlue-secondary: #3a73d5;
