--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,8 @@
 @import "./3.component/RoundCornerModal";
 @import "./3.component/MainMenu";
 @import "./3.component/DropDownMenuItem";
+@import "./3.component/ConfigurationItem";
+@import "./3.component/InfoBox";
 
 @import "./5.pages/home";
 @import "./5.pages/login";
