--- a/src/scss/6.theme/_dark.scss
+++ b/src/scss/6.theme/_dark.scss
@@ -86,7 +86,7 @@
 
   //menu
   .ant-menu {
-    background-color: $common_dark_extra_color_8;
+    background-color: $common_dark_extra_color_9;
   }
 
   //divider
@@ -422,7 +422,7 @@
 
   //Main Side Nav
   .main_sidebar {
-    background-color: $common_dark_extra_color_8;
+    background-color: $common_dark_extra_color_9;
   }
   //Main Side Nav End
 
@@ -810,5 +810,22 @@
 
   .ant-tree {
     color: $dark_font_color;
+  }
+
+  //Infobox
+  .InfoBox {
+    background: $common_dark_extra_color_8;
+    box-shadow: 0px 1px 4px rgba($dark_shadow_color, 0.5);
+
+    &_IconContainer {
+    }
+    &_DataContainer {
+      &-title {
+        color: $dark_font_color;
+      }
+      &-count {
+        color: $dark_font_color;
+      }
+    }
   }
 }
