--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -129,3 +129,66 @@
     font-size: 1.2rem;
   }
 }
+
+
+
+
+// ----------------Drag And Drop --------------
+
+.c-multi-drag-table.is-dragging table {
+  border: 1px solid #4285f4;
+}
+.c-multi-drag-table .ant-col {
+  position: relative;
+}
+// .c-multi-drag-table .ant-col:first-child:after {
+//   display: block;
+//   content: "";
+//   position: absolute;
+//   right: 0;
+//   top: 0;
+//   width: 1px;
+//   height: 100%;
+//   background: #e2e2e2;
+//   z-index: 1;
+// }
+.c-multi-drag-table .inner-col {
+  position: relative;
+  height: 100%;
+  background: #fff;
+  padding: 10px;
+  /* z-index: 2; */
+}
+.c-multi-drag-table .ant-table {
+}
+.c-multi-drag-table .ant-table-thead > tr > th,
+.c-multi-drag-table .ant-table-tbody > tr > td,
+.c-multi-drag-table .ant-table tfoot > tr > th,
+.c-multi-drag-table .ant-table tfoot > tr > td {
+  // padding: 6px 16px;
+}
+.c-multi-drag-table .ant-table-tbody > tr.ant-table-placeholder > td,
+.c-multi-drag-table .ant-table-tbody > tr.ant-table-placeholder:hover > td {
+  background: transparent;
+}
+.c-multi-drag-table .ant-table-tbody > tr.row-item {
+  background: #fff;
+}
+.c-multi-drag-table
+  .ant-table-tbody.is-dragging-over
+  > tr.ant-table-placeholder {
+  background: #deebff !important;
+}
+.c-multi-drag-table .ant-table-tbody > tr.row-item.row-selected {
+  background: #deebff;
+}
+.c-multi-drag-table .ant-table-tbody > tr.row-item.row-dragging {
+  display: table;
+  box-shadow: 0px 1px 4px rgba(145 ,158 ,171 , .5);
+}
+.c-multi-drag-table .ant-table-tbody > tr.row-item.row-dragging > td {
+  border-bottom: 0;
+}
+.c-multi-drag-table .ant-table-tbody > tr.row-item.row-ghosting {
+  opacity: 0.5;
+}
